# gui

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  liblvgl.config  lv_conf.h  lv_drv_conf.h  main.c  main.cpp  sdl_init.c
application/: CMakeLists.txt  ConfigParam.cpp  ConfigParam.h  DetectHotPlug.cpp  DetectHotPlug.h  NetWorkApi.c  NetWorkApi.h  SystemInit.cpp  SystemInit.h  cast_api.cpp  cast_api.h  cast_conf.h  gui_app.mk  init.c  init.h  key_map.h  projector_gui_app.mk  windows.c  windows.h
application/core/SysParam/: SysParam.cpp  SysParam.h  SysParam.ini
application/core/SysSettings/: NetWork.cpp
application/hcapi/: com_api.c  media_player.c  media_player.h  os_api.h
application/key/: key.c  key.h
application/media/: MediaCom.cpp  MediaCom.h  MediaFile.c  MediaFile.h  MediaScreen.cpp  MediaScreen.h  Text.cpp  Video.c  media_list.c  media_list.h
application/resource/: Android_QR.c  cast_android_cn.c  cast_android_de.c  cast_android_en.c  cast_android_es.c  cast_android_fr.c  cast_android_it.c  cast_android_jp.c  cast_cn.c  cast_de.c  cast_en.c  cast_es.c  cast_fr.c  cast_ios_cn.c  cast_ios_de.c  cast_ios_en.c  cast_ios_es.c  cast_ios_fr.c  cast_ios_it.c  cast_ios_jp.c  cast_it.c  cast_jp.c  iOS_QR.c  resource.h  router_connected.c  router_disconnected.c  ui_font_MyFont26.c  ui_font_MyFont34.c  ui_font_MyFont38.c  ui_img_android_cast_n_png.c  ui_img_arrow_right_png.c  ui_img_audio_mute_volume_png.c  ui_img_audio_volume_png.c  ui_img_bluetooth_64_png.c  ui_img_bluetooth_earphone_png.c  ui_img_delivery_png.c  ui_img_dlna_cast_n_png.c  ui_img_drive_png.c  ui_img_filetype_jpg_png.c  ui_img_filetype_mp3_png.c  (+68 more)
application/setting/: Base.h  NetWork.cpp  NetWork.h  Picture.cpp  Picture.h  Position.cpp  Position.h  Setting.cpp  Setting.h  SettingBase.h  Sound.cpp  Sound.h  System.cpp  System.h  gui_setting.ini
application/ui/: FileType.h  HdmiRx.c  HdmiRx.h  HomeScreen.c  HomeScreen.h  LanguageScreen.c  LanguageScreen.cpp  LanguageScreen.h  MediaCom.c  MediaCom.h  MediaFile.c  MediaFile.h  MediaScreen.c  MediaScreen.cpp  MediaScreen.h  Music.c  Music.cpp  Music.h  SettingScreen.cpp  SettingScreen.h  Source.cpp  Source.h  SyncScreen.cpp  SyncScreen.h  Video.c  Video.h  Volume.cpp  Volume.h  data_struct.c  data_struct.h  media_list.c  media_list.h  music_irc.cpp  music_irc.h  music_lyric.cpp  music_lyric.h  ui_com.cpp  ui_com.h
application/ui/media/: MediaCom.c  MediaCom.h  MediaFile.c  MediaFile.h  MediaScreen.cpp  MediaScreen.h  Music.cpp  Music.h  Photo.c  Photo.h  Text.cpp  Text.h  Video.c  Video.h  media_list.c  media_list.h  music_lyric.cpp  music_lyric.h
application/ui/resource/: Android_QR.c  cast_android_cn.c  cast_android_de.c  cast_android_en.c  cast_android_es.c  cast_android_fr.c  cast_android_it.c  cast_android_jp.c  cast_cn.c  cast_de.c  cast_en.c  cast_es.c  cast_fr.c  cast_ios_cn.c  cast_ios_de.c  cast_ios_en.c  cast_ios_es.c  cast_ios_fr.c  cast_ios_it.c  cast_ios_jp.c  cast_it.c  cast_jp.c  iOS_QR.c  router_connected.c  router_disconnected.c  ui.h  ui_font_MyFont26.c  ui_font_MyFont34.c  ui_font_MyFont38.c  ui_img_android_cast_n_png.c  ui_img_arrow_right_png.c  ui_img_audio_mute_volume_png.c  ui_img_audio_volume_png.c  ui_img_bluetooth_64_png.c  ui_img_bluetooth_earphone_png.c  ui_img_delivery_png.c  ui_img_dlna_cast_n_png.c  ui_img_drive_png.c  ui_img_filetype_jpg_png.c  ui_img_filetype_mp3_png.c  (+68 more)
application/ui/setting/: Base.h  Picture.cpp  Picture.h  Setting.cpp  Setting.h  Sound.cpp  Sound.h  System.cpp  System.h  gui_setting.ini
hcapi/: cast_api.c  cast_api.cpp  cast_api.h  cast_conf.h  com_api.c  com_api.h  data_mgr.c  data_mgr.h  gpio_ctrl.h  hcapi.mk  hotplug_mgr.c  hotplug_mgr.h  (+14 more)
lv_host_sim/: CMakeLists.txt  lv_conf.h
(+45 files in other folders)
